fix header spacing

--- a/styles/header.css
+++ b/styles/header.css
@@ -37,7 +37,7 @@
 }
 
 .right-header{
-    margin-right: -10px;
+    margin-right: -90px;
     width: 515px;
 }
 
